# homework_2

./: .gitignore  examples.http
backend/: .env.example  Cargo.toml  env.example
backend/migrations/: 20230717213535_add_questions_table.up.sql  20230717214352_add_answers_table.up.sql  20230717214953_question_seed.up.sql  20230723213535_add_comments_table.up.sql  20230723213535_answer_seed.up.sql  20230723213536_comment_seed.up.sql
backend/src/: answer.rs  comment.rs  db.rs  error.rs  handlers.rs  layers.rs  lib.rs  main.rs  question.rs  routes.rs
backend/tests/: integration_tests.rs
backend/tests/fixtures/: answers.sql  questions.sql
client/src/: main.rs
